# gcstr

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  convenience.c  convenience.h  error.c  error.h  filedata.c  filedata.h  gcstr-config-version.cmake  gcstr-config.cmake  gcstr.h  gcstr.pc  gotypes.h  main.c  panic.c  panic.h  print.c  print.h  str.c  str.h  stringlist.c  stringlist.h  structs.h  version.sh
cmd/args/: .clang-format  Makefile  README.md  main.c
cmd/sleepycat/: Makefile  README.md  main.c
